--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations, Koala!</h1>
+    <h1>Congratulations, KoHala!</h1>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
